@@ -4818,13 +4818,20 @@ loop:			for(int i = lineNo + 1; i < getLineCount(); i++)
 			painter.getFont().getStringBounds(foo,0,1,
 			painter.getFontRenderContext()).getWidth());
 
+		String oldWrap = wrap;
 		wrap = buffer.getStringProperty("wrap");
 		hardWrap = wrap.equals("hard");
 		softWrap = wrap.equals("soft");
+		boolean oldWrapToWidth = wrapToWidth;
+		int oldWrapMargin = wrapMargin;
 		setMaxLineLength(buffer.getIntegerProperty("maxLineLen",0));
 
+		boolean wrapSettingsChanged = !(wrap.equals(oldWrap)
+			&& oldWrapToWidth == wrapToWidth
+			&& oldWrapMargin == wrapMargin);
+
 		if(displayManager != null && !bufferChanging
-			&& buffer.isLoaded())
+			&& buffer.isLoaded() && wrapSettingsChanged)
 		{
 			displayManager.invalidateScreenLineCounts();
 			displayManager.notifyScreenLineChanges();
